# webasto-lora-remote-ctrl

./: .gitignore  99-webasto-devices.rules  FUSION_IMPROVEMENT.md  MENU_SUMMARY.md  PHASE1_IMPLEMENTATION.md  PHASE1_QUICK_REF.md  PHASE2_OVERVIEW.md  PHASE2_QUANTIZATION.md  PROTOCOL_OPTIMIZATION.md  QUANTIZATION_SUMMARY.md  README.md  SENDER_MENU.md  SENDER_MENU_USAGE.md  platformio.ini
.github/: copilot-instructions.md
.github/skills/mqtt-ha/: SKILL.md
.github/skills/protocol/: SKILL.md
.github/skills/ttgo-lora32-oled/: SKILL.md
.github/skills/wbus/: SKILL.md
include/: config.h  credentials.h copy.template  project_config.h
lib/common/: encryption.cpp  encryption.h  lora_link.cpp  lora_link.h  menu_handler.cpp  menu_handler.h  mqtt_client.cpp  mqtt_client.h  oled_ui.cpp  oled_ui.h  ota_updater.cpp  ota_updater.h  protocol.cpp  protocol.h  status_led.h  wbus_simple.cpp  wbus_simple.h  wifi_manager.cpp  wifi_manager.h
mcp-serial-debug/: CLAUDE_CONFIG.md  README.md  pyproject.toml
mcp-serial-debug/webasto_serial_debug/: __init__.py  __main__.py  server.py
src/loratest/: main.cpp
src/receiver/: main.cpp
src/sender/: main.cpp
src/simulator/: main.cpp
src/wbustest/: main.cpp
